// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Actions/Button Big 1`] = `
<Button
  big={true}
  onClick={[Function]}
>
  <button
    className="button is-big"
    onClick={[Function]}
  >
    Big Button
  </button>
</Button>
`;

exports[`Storyshots Actions/Button Filled 1`] = `
<Button
  type={AppearanceStyleType.primary}
  onClick={[Function]}
>
  <button
    className="button is-primary"
    onClick={[Function]}
  >
    Filled Button
  </button>
</Button>
`;

exports[`Storyshots Actions/Button Inaccessible 1`] = `
<button
  style={
    Object {
      "backgroundColor": "red",
      "color": "darkRed",
    }
  }
>
  Inaccessible button
</button>
`;

exports[`Storyshots Actions/Button Regular Case 1`] = `
<Button
  normalCase={true}
  onClick={[Function]}
>
  <button
    className="button is-normal-case"
    onClick={[Function]}
  >
    Button (Normal Case)
  </button>
</Button>
`;

exports[`Storyshots Actions/Button Small 1`] = `
<Button
  onClick={[Function]}
  small={true}
>
  <button
    className="button is-small"
    onClick={[Function]}
  >
    Small Button
  </button>
</Button>
`;

exports[`Storyshots Actions/Button Small And Filled 1`] = `
<Button
  type={AppearanceStyleType.primary}
  onClick={[Function]}
  small={true}
>
  <button
    className="button is-primary is-small"
    onClick={[Function]}
  >
    Small and Filled Button
  </button>
</Button>
`;

exports[`Storyshots Actions/Button Standard 1`] = `
<Button
  onClick={[Function]}
>
  <button
    className="button"
    onClick={[Function]}
  >
    Button Component
  </button>
</Button>
`;
